deploy/k8s/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
    - port: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: ghcr.io/bigreds/fell-scout
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /api/status
              port: 5000
            periodSeconds: 10
